force-app/main/default/objects/Project__c/fields/Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status__c</fullName>
    <formula>if( (TODAY() - LastActivityDate) &gt; 30 , &apos;Neglected&apos; ,
IF( (TODAY() - LastActivityDate) &gt; 15 , &apos;At Risk&apos; ,
IF( OR( ( TODAY() - LastActivityDate ) &gt; 0, (TODAY() - LastActivityDate) &lt; 0 ) , &apos;Current&apos;,&apos;Neglected&apos;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Status</label>
    <type>Text</type>
</CustomField>