force-app/main/default/objects/Project__c/fields/Activity_Status_KPI__c.field-meta.xml
<CustomField>
    <fullName>Activity_Status_KPI__c</fullName>
    <formula>IF( Activity_Status__c = &apos;Neglected&apos; ,IMAGE(&apos;/resource/ActvityStatusKPI/Red.gif&apos;, &apos;Neglected&apos;),
IF( Activity_Status__c = &apos;At Risk&apos; ,IMAGE(&apos;/resource/ActvityStatusKPI/yellow.gif&apos;, &apos;At Risk&apos;),
IF( Activity_Status__c = &apos;Current&apos; ,IMAGE(&apos;/resource/ActvityStatusKPI/Green.gif&apos;, &apos;Current&apos;),&apos;N/A&apos;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Status KPI</label>
    <type>Text</type>
</CustomField>