force-app/main/default/objects/Project__c/fields/Bid_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Recv_d_Date__c</fullName>
    <label>Bid Recv&apos;d Date</label>
    <type>Date</type>
</CustomField>