force-app/main/default/objects/Project__c/fields/Bid_Request_recieved__c.field-meta.xml
<CustomField>
    <fullName>Bid_Request_recieved__c</fullName>
    <label>Bid Request received</label>
    <type>Date</type>
</CustomField>