force-app/main/default/objects/Project__c/fields/Bid_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Sent_Date__c</fullName>
    <inlineHelpText>This is the actual date the bid was sent to the Client.</inlineHelpText>
    <label>Bid Sent Date</label>
    <type>Date</type>
</CustomField>