force-app/main/default/objects/Project__c/fields/Client_Budget__c.field-meta.xml
<CustomField>
    <fullName>Client_Budget__c</fullName>
    <label>Client Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>