force-app/main/default/objects/Project__c/fields/Created_Date_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Legacy__c</fullName>
    <label>Created Date (Legacy)</label>
    <type>Date</type>
</CustomField>