force-app/main/default/objects/Project__c/fields/Deposit_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Collected_Date__c</fullName>
    <label>Deposit Collected Date</label>
    <type>Date</type>
</CustomField>