force-app/main/default/objects/Project__c/fields/Est_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Bid_Date__c</fullName>
    <inlineHelpText>Estimated Bid Date shows the best guess on when Bidding will begin</inlineHelpText>
    <label>Est Bid Date</label>
    <type>Date</type>
</CustomField>