force-app/main/default/objects/Project__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <inlineHelpText>This field is read-only and is calculated based on the General Contractor located in the Project Relationships Section</inlineHelpText>
    <label>General Contractor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>