force-app/main/default/objects/Project__c/fields/HasBasisofDesign__c.field-meta.xml
<CustomField>
    <fullName>HasBasisofDesign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBasisofDesign</label>
    <type>Checkbox</type>
</CustomField>