force-app/main/default/objects/Project__c/fields/Include_in_Resume__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Resume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Resume</label>
    <type>Checkbox</type>
</CustomField>