force-app/main/default/objects/Project__c/fields/Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid__c</fullName>
    <label>Invoice Paid</label>
    <type>Date</type>
</CustomField>