force-app/main/default/objects/Project__c/fields/Job_Amount__c.field-meta.xml
<CustomField>
    <fullName>Job_Amount__c</fullName>
    <label>Job Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>