force-app/main/default/objects/Project__c/fields/Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>Job_Completed__c</fullName>
    <label>Job % Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%,25%,50%,75%, 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>