force-app/main/default/objects/Project__c/fields/Job_Hours_Over_Under__c.field-meta.xml
<CustomField>
    <fullName>Job_Hours_Over_Under__c</fullName>
    <label>Job Hours Over/Under</label>
    <length>5</length>
    <type>Text</type>
</CustomField>