force-app/main/default/objects/Project__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <formula>IF (Parent_Project__c=&apos;&apos; , &quot;Parent&quot;,&quot;Child&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent is a formula that tells you if this Project is a Parent or Child Project. If this project is linked to a Parent Project then it assumes it is a &quot;Child&quot; Project.</inlineHelpText>
    <label>Parent</label>
    <type>Text</type>
</CustomField>