force-app/main/default/objects/Project__c/fields/Post_Job_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_Job_Notes__c</fullName>
    <label>Post- Job Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>