force-app/main/default/objects/Project__c/fields/Pre_Job_Walk_Thru__c.field-meta.xml
<CustomField>
    <fullName>Pre_Job_Walk_Thru__c</fullName>
    <label>Pre-Job Walk-Thru</label>
    <type>DateTime</type>
</CustomField>