force-app/main/default/objects/Project__c/fields/Progress_Payment__c.field-meta.xml
<CustomField>
    <fullName>Progress_Payment__c</fullName>
    <label>Progress Payment Request</label>
    <type>Date</type>
</CustomField>