force-app/main/default/objects/Project__c/fields/Project_Potential__c.field-meta.xml
<CustomField>
    <fullName>Project_Potential__c</fullName>
    <label>Project Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>