force-app/main/default/objects/Project__c/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <label>Project Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Wall Covering</fullName>
            </value>
            <value>
                <fullName>Wall Covering Stripping</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Power Washing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>