force-app/main/default/objects/Project__c/fields/Project_Source__c.field-meta.xml
<CustomField>
    <fullName>Project_Source__c</fullName>
    <inlineHelpText>Project Source shows where this project came from</inlineHelpText>
    <label>Project Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Signs/Vans</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Community Inv</fullName>
            </value>
            <value>
                <fullName>Repeat Customer</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t Share</fullName>
            </value>
            <value>
                <fullName>Contractor Bid List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>