force-app/main/default/objects/Project__c/fields/Reporting_Month__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Month__c</fullName>
    <label>Reporting Month</label>
    <type>Date</type>
</CustomField>