force-app/main/default/objects/Project__c/fields/Sales_Apt_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Apt_Date__c</fullName>
    <inlineHelpText>This is the actual date/time that the Sales Rep is going to evaluate the Project.</inlineHelpText>
    <label>Sales Apt Date</label>
    <type>DateTime</type>
</CustomField>