force-app/main/default/objects/Project__c/fields/Sold_Dead_Date__c.field-meta.xml
<CustomField>
    <fullName>Sold_Dead_Date__c</fullName>
    <inlineHelpText>Sold/Date Date shows the date the project was awarded or lost.</inlineHelpText>
    <label>Sold/Dead Date</label>
    <type>Date</type>
</CustomField>