force-app/main/default/objects/Project__c/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <inlineHelpText>This field allows more detail on what project source provided this project</inlineHelpText>
    <label>Source Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>