force-app/main/default/objects/Project__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Stage shows the project stage or milestone</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Appointment Set</fullName>
                <default>true</default>
                <label>Sales Appointment Set</label>
            </value>
            <value>
                <fullName>Estimate Sent</fullName>
            </value>
            <value>
                <fullName>Job Accepted</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Job Completed</fullName>
            </value>
            <value>
                <fullName>Job Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>