force-app/main/default/objects/Project__c/fields/Targeted_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Completion_Time__c</fullName>
    <label>Targeted Completion Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>