force-app/main/default/objects/Project__c/fields/Team_Number__c.field-meta.xml
<CustomField>
    <fullName>Team_Number__c</fullName>
    <label>Team Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>