force-app/main/default/objects/Project__c/fields/Year_House_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_House_Built__c</fullName>
    <label>Year House Built</label>
    <length>4</length>
    <type>Text</type>
</CustomField>