force-app/main/default/objects/Project__c/validationRules/DepositNotCollectedStartDateNotAuth.validationRule-meta.xml
<ValidationRule>
    <fullName>DepositNotCollectedStartDateNotAuth</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(
ISBLANK(Deposit_Collected_Date__c),
NOT(ISBLANK(Start_Date__c))
),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>Deposit_Collected_Date__c</errorDisplayField>
    <errorMessage>Deposit Collected Date is required.  You cannot enter a Start Date, until a Deposit is collected.</errorMessage>
</ValidationRule>