force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bid_Amount__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Job_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>Sear</value>
    </filters>
    <label>All</label>
</ListView>