force-app/main/default/objects/Project__c/listViews/Open_Residential_Bids.listView-meta.xml
<ListView>
    <fullName>Open_Residential_Bids</fullName>
    <columns>NAME</columns>
    <columns>Project_Scope__c</columns>
    <columns>Bid_Sent_Date__c</columns>
    <columns>Bid_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Reporting_Month__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Estimate Sent</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Residential</value>
    </filters>
    <label>2 Open Residential Bids</label>
</ListView>