force-app/main/default/objects/Project__c/listViews/Pep_Legacy_Open_Projects.listView-meta.xml
<ListView>
    <fullName>Pep_Legacy_Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>Sales_Apt_Date__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Project_Scope__c</columns>
    <columns>Type__c</columns>
    <columns>Project_Source__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Reporting_Month__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Sales Appointment Set,Estimate Sent,Job Accepted,Scheduled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Residential</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>ssale</value>
    </filters>
    <label>(Pep-Legacy-Residential) Open Projects</label>
</ListView>