force-app/main/default/objects/Project__c/listViews/PEP_LegacyImport09032021.listView-meta.xml
<ListView>
    <fullName>PEP_LegacyImport09032021</fullName>
    <columns>Created_Date_Legacy__c</columns>
    <columns>NAME</columns>
    <columns>Bid_Sent_Date__c</columns>
    <columns>Bid_Amount__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Est_Bid_Date__c</columns>
    <columns>Job_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date_Legacy__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PEP-LegacyImport09032021</label>
</ListView>