force-app/main/default/objects/Project__c/listViews/X5_Finished_Commercial_Jobs.listView-meta.xml
<ListView>
    <fullName>X5_Finished_Commercial_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Project_Scope__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Progress_Payment__c</columns>
    <columns>Date_Completed__c</columns>
    <columns>Job_Hours_Over_Under__c</columns>
    <columns>Invoice_Paid_Date__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Reporting_Month__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Job Completed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Commercial</value>
    </filters>
    <label>5 Finished Commercial Jobs</label>
</ListView>