force-app/main/default/objects/Project__c/listViews/X6_Dead_Commercial_Bids.listView-meta.xml
<ListView>
    <fullName>X6_Dead_Commercial_Bids</fullName>
    <columns>NAME</columns>
    <columns>Project_Scope__c</columns>
    <columns>Type__c</columns>
    <columns>Project_Source__c</columns>
    <columns>Loss_Reason__c</columns>
    <columns>Lost_Reason_Details__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Reporting_Month__c</columns>
    <columns>Stage__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Job Declined</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Commercial</value>
    </filters>
    <label>6 Dead Commercial Bids</label>
</ListView>